feat: project file standard update
