# internal/router/tool.go
@@ -1,14 +1,15 @@
+// router/tool.go: 工具相关路由
 package router
 
 import (
 	"github.com/gin-gonic/gin"
-	"web_backend.com/m/v2/internal/app/controller"
+	"web_backend.com/m/v2/internal/app/controllers"
 )
 
 func GenToolRouter(r *gin.RouterGroup) {
 	tool := r.Group("/tools")
 	{
-		tool.GET("", controller.ToolController{}.ToolListController)
-		tool.POST("", controller.ToolController{}.ToolAddController)
+		tool.GET("", controllers.ToolController{}.ToolListController)
+		tool.POST("", controllers.ToolController{}.ToolAddController)
 	}
 }
